logs/seven.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/seven'...
Listing './lib/python3.5/site-packages/seven/fixes'...
Compiling './lib/python3.5/site-packages/seven/hook.py'...
***   File "./lib/python3.5/site-packages/seven/hook.py", line 87
    exec rtool(file.read(), fullname) in mod.__dict__
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/seven/lib2to3'...
Compiling './lib/python3.5/site-packages/seven/lib2to3/main.py'...
***   File "./lib/python3.5/site-packages/seven/lib2to3/main.py", line 70
    print line
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/seven/lib2to3/patcomp.py'...
***   File "./lib/python3.5/site-packages/seven/lib2to3/patcomp.py", line 60
    except parse.ParseError, e:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/seven/lib2to3/pgen2'...
Compiling './lib/python3.5/site-packages/seven/lib2to3/pgen2/driver.py'...
***   File "./lib/python3.5/site-packages/seven/lib2to3/pgen2/driver.py", line 138
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/seven/lib2to3/pgen2/grammar.py'...
***   File "./lib/python3.5/site-packages/seven/lib2to3/pgen2/grammar.py", line 116
    print "s2n"
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/seven/lib2to3/pgen2/literals.py'...
***   File "./lib/python3.5/site-packages/seven/lib2to3/pgen2/literals.py", line 56
    print i, c, s, e
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/seven/lib2to3/pgen2/pgen.py'...
***   File "./lib/python3.5/site-packages/seven/lib2to3/pgen2/pgen.py", line 204
    print "Dump of NFA for", name
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/seven/lib2to3/pgen2/tokenize.py'...
***   File "./lib/python3.5/site-packages/seven/lib2to3/pgen2/tokenize.py", line 170
    print "%d,%d-%d,%d:\t%s\t%s" % \
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/seven/lib2to3/refactor.py'...
***   File "./lib/python3.5/site-packages/seven/lib2to3/refactor.py", line 327
    except IOError, err:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/seven/refactor.py'...
***   File "./lib/python3.5/site-packages/seven/refactor.py", line 26
    except exceptions.FutureImportNeeded, exc:
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/seven/test'...
Listing './lib/python3.5/site-packages/seven/test/absolute_import'...
Compiling './lib/python3.5/site-packages/seven/test/absolute_import/test.py'...
***   File "./lib/python3.5/site-packages/seven/test/absolute_import/test.py", line 4
    print 'Imported:', os
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/seven/test/class_decorators.py'...
***   File "./lib/python3.5/site-packages/seven/test/class_decorators.py", line 11
    print 'Foo:', Foo()
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/seven/test/division.py'...
***   File "./lib/python3.5/site-packages/seven/test/division.py", line 1
    print '5 / 3 =', 5 / 3
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/seven/test/with_statement.py'...
***   File "./lib/python3.5/site-packages/seven/test/with_statement.py", line 8
    print "Executing 'with' statement."
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/seven-1.0.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
